# Nets

./: CMakeLists.txt
PlayGround/: main.c  some.h
week1/: client  client.c  main.c  server.c
week4/: client.c  common.h  server.c
week5/: listener.c  talker.c
week7/: common.h  node.c  tam.cpp  tampl.c
week8/: common.h  node.c
week8/peer1/data/: file.txt
week8/peers/peer1/: torrent
week8/peers/peer1/data/: dostoevsky.txt  file.txt  memes.txt
week8/peers/peer2/: torrent
week8/peers/peer3/: torrent
week8/peers/peer3/data/: another.txt  dostoevsky.txt
